--- a/CSS/stat.css
+++ b/CSS/stat.css
@@ -84,7 +84,9 @@
 .countryCard .card-text {
   color: black;
 }
-
+a{
+  text-decoration: none;
+}
 .stat-section {
   width: auto;
   height: min-content;
@@ -108,26 +110,13 @@
   height: min-content;
 }
 .country-name h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-align: center;
-  color: white;
-  font-weight: 100;
+  color: black;
+  font-weight: 800;
   flex-grow: 1;
   flex-shrink: 1;
-}
-.stat-section-search-input {
-  width: 100%;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.country-name-searchbar {
-  width: 80%;
-  border: 0.2;
-  padding: 10px;
-  font-size: 16px;
+
 }
 
 .stat-section-search-output {
@@ -141,7 +130,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   gap: 50px;
   flex-shrink: 1;
@@ -149,30 +138,22 @@
 }
 .country-image {
   display: flex;
-  justify-content: center;
   align-items: center;
-  /* width: min-content; */
-  padding: 10px;
-  flex-grow: 1;
-  flex-shrink: 1;
+  width: min-content;
+  padding: 0px;
+  margin-left: 10%;
+  margin-top: 5%;
 }
 .country-img {
-  width: 80%;
+  width: 500px;
+  height: 300px;
 }
-.country-updates {
+.country-map-section{
+  width: 100%;
+  height: 40vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  width: 100%;
-  line-height: 2;
-  padding: 10px;
-  font-size: 18px;
-  flex-wrap: wrap;
+  border: 1px solid red;
 }
-#arrow-icon {
-  font-size: 25px;
-  margin-right: 10px;
-}
-
 /* end of statistics page css */
