--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,6 +58,80 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+/* start of event slot  */
+.close {
+  position: relative;
+  bottom: 2%;
+right: -95%;
+  cursor: pointer;
+  font-size: 3rem;
+}
+
+/* Popup styles */
+
+#overlay {
+  position: relative;
+  left: 1%;
+  width: 80%;
+  bottom: 1300px;
+  height: 100%;
+  z-index: 10;
+  /* visibility: hidden;
+  opacity: 0; */
+  cursor: pointer;
+  transition: 3s;
+  display: none;
+  transition: all ease 3s;
+}
+#overlay.active {
+  position: relative;
+  bottom: 500px;
+  visibility: visible;
+  display: block;
+  opacity: 1;
+  cursor: pointer;
+  transition: all ease 1s;
+  filter: blur(0px);
+}
+.popup {
+  width: 100%;
+  position: relative;
+  bottom: 150%;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+/* Form styles */
+form {
+  width: 100%;
+  margin: 0 auto;
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+  font-size: 14px;
+}
+
+input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 12px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: #ffffff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+/* end of pop up of event slot */
+
+
 .blog-home2 {
   font-family: "Montserrat", sans-serif;
   color: #8d97ad;
@@ -65,7 +139,6 @@
 }
 .full-secreen-video {
   width: 100%;
-  /* height: min-content; */
   position: relative;
   z-index: -2;
   top: 0px;
@@ -73,6 +146,7 @@
 .hero-sec-video {
   width: 100%;
   position: relative;
+  height: 70%;
 }
 
 * {
@@ -87,6 +161,7 @@
 /* navigation section */
 header {
   width: 100%;
+  height: min-content;
 }
 header nav {
   width: 100%;
@@ -96,7 +171,6 @@ header nav {
   padding: 0px;
   display: flex;
   align-items: center;
-  height: min-content;
   animation: nav-load 500ms ease-in-out;
 }
 @keyframes nav-load {
@@ -106,6 +180,9 @@ header nav {
   100% {
     transform: translateY(0);
   }
+}
+#filters{
+  display: none;
 }
 .main_logo {
   width: 12rem;
@@ -213,7 +290,8 @@ ul li a:hover {
 .hero-section-1 {
   display: flex;
   width: 100%;
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
   flex-grow: 1;
   flex-grow: 2;
   flex-shrink: 1;
@@ -221,11 +299,9 @@ ul li a:hover {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  height: min-content;
-  gap: 50px;
 }
 .left-side {
-  width: 400px;
+  width: 250px;
   display: flex;
   flex-grow: 1;
 
@@ -234,7 +310,7 @@ ul li a:hover {
   transform: rotateX(-1000%);
 }
 .hero-left-img {
-  width: 100%;
+  width: 250px;
   flex-grow: 1;
   flex-shrink: 1;
   height: min-content;
@@ -341,7 +417,6 @@ ul li a:hover {
 
 .img-card .card-text {
   padding: 0 15px 15px;
-  text-align: justify;
   margin-top: 10px;
   line-height: 1.5;
 }
@@ -378,25 +453,23 @@ ul li a:hover {
 }
 
 .img-card.iCard-style1 .card-title {
-  position: absolute;
   font-family: "Open Sans", sans-serif;
   z-index: 1;
-  top: 10px;
-  left: 10px;
-
+  font-weight: 600;
+  text-align: center;
   font-size: 30px;
   color: black;
 }
 .img-card.iCard-style1 .card-text {
-  color: #795548;
+  color: #000;
 }
 
 .img-card.iCard-style1 .card-link a {
-  color: #ff9800;
+  color: #0c2d57;
 }
 
 .img-card.iCard-style1 .card-link a:after {
-  background: #ff9800;
+  background: #000;
 }
 
 .hero-section-3 {
@@ -446,19 +519,17 @@ ul li a:hover {
   flex-shrink: inherit;
   margin: 30px;
   height: min-content;
-  background-color: whitesmoke;
   padding: 0px 30px 30px 30px;
+  background-color: white;
+  box-shadow: 0px 0px 1px #2c3e50;
   display: flex;
-  box-shadow: none;
   justify-content: center;
   align-items: center;
   gap: 10px;
   cursor: pointer;
   flex-direction: column;
 }
-.event-card:hover {
-  box-shadow: 1px 1px 2px black;
-}
+
 .event-card .event-img {
   width: 350px;
   height: 250px;
@@ -493,8 +564,9 @@ ul li a:hover {
   /* border: none; */
 }
 .event-card .event-learn-more:hover {
-  background-color: white;
+  background-color: orange;
   color: black;
+  border: none;
 }
 .event-card .event-learn-more a {
   color: black;
@@ -707,17 +779,19 @@ footer {
 }
 
 .subscribe-button {
-  background-color: #2980b9;
+  background-color: transparent;
+  border: 1px solid white;
   color: #ffffff;
   padding: 10px;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
   width: 100%;
 }
 
 .subscribe-button:hover {
-  background-color: #2c3e50;
+  background-color: orange;
+  color: black;
+  font-weight: 800;
 }
 
 .privacy-message {
@@ -935,7 +1009,6 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 5%;
   }
   .hero-sec-video {
     display: none;
@@ -944,7 +1017,6 @@ footer {
     display: block;
     width: 100%;
     height: min-content;
-
     background-color: #0c2d57;
   }
   /* news letter section bottom margin changed */
@@ -998,9 +1070,10 @@ footer {
   }
 
   .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+    position: relative;
+    top: 5px;
+    bottom: 10px;
+    right: -90%;
     cursor: pointer;
     font-size: 3rem;
   }
@@ -1014,16 +1087,18 @@ footer {
     bottom: 1300px;
     height: 100%;
     z-index: 10;
-    visibility: hidden;
-    opacity: 0;
+    /* visibility: hidden;
+    opacity: 0; */
     cursor: pointer;
     transition: 3s;
+    display: none;
     transition: all ease 3s;
   }
   #overlay.active {
     position: relative;
     bottom: 500px;
     visibility: visible;
+    display: block;
     opacity: 1;
     cursor: pointer;
     transition: all ease 1s;
